k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: game-2048
  labels:
    app.kubernetes.io/name: app-2048
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: app-2048
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  type: NodePort
